fix high contrast

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -159,7 +159,7 @@ h6
   background-color: colors.$high-contrast-bg
 
   div, :not(div.nhc-div)
-    background-color: colors.$high-contrast-bg
+    //background-color: colors.$high-contrast-bg !important
   div.bg-primary, div.bg-white, form
     background-color: colors.$high-contrast-bg !important
 
